# aeternum

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  compose.yaml  go.mod  go.sum  go.work  install.sh  justfile  main.go  mkdocs.yml  output.json  pyproject.toml  specs.json
.github/actions/create-snap/: action.yaml
.github/release/: 0.0.1.md
.github/workflows/: build.yaml  deployment.yaml  docs.yaml  pre-commit.yaml  release.yaml  smoke-tests.yaml  testing.yaml
api/: go.mod  go.sum
api/auth/: jwt.go  jwt_test.go  middleware.go
api/cmd/: main.go
api/configs/: configs.go  configs_test.go
api/db/: db.go  db_test.go  supabase.go
api/environment/: environment.go
api/httperror/: errors_test.go
api/pkg/configs/: configs.go
api/pkg/core/: client.go  configs.go  configs_test.go  context.go  data.go  env.go  logger.go  logger_test.go
api/pkg/db/: db.go
api/pkg/httperror/: errors.go
api/router/: router.go
api/router/v0/: routes.go  (+4 more)
cli/: go.sum
cli/core/: commands.go  commands_test.go  models.go  registry.go  runner.go
cluster/: deployment.yaml  namespace.yaml
deployment/: README.md
deployment/cluster/: deployment.yaml  service.yaml
deployment/infrastructure/: main.tf  variables.tf
developer/: jwt-authentication.md
docker/: api.Dockerfile  cli.Dockerfile
docs/: Dockerfile  index.md  requirements.md  roadmap.md
docs/styles/: custom.css
docs/usage/: api-v0.md  jwt-authentication.md
execution/: client.go  client_test.go  go.mod  go.sum
external-tests/smoke/: main.go
sample/: basic_request.json  request.sh
(+31 files in other folders)
