[tool.poetry]
name = "aeternum-api"
description = "SaaS tool designed to continuously test API availability"
authors = ["Chino Franco <chino.franco@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
